Style bugs have been fixed
Added an animation for the header. Fixed the overlapping of icons in the login block.

--- a/style.css
+++ b/style.css
@@ -1086,7 +1086,6 @@ body::-webkit-scrollbar {
 }
 
 .header {
-    background: var(--gradient-northern-lights);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
@@ -1104,11 +1103,8 @@ body::-webkit-scrollbar {
 }
 
 .auth-img {
-    position: absolute;
-    right: 0rem;
     width: 2.75rem;
     height: 2.75rem;
-    z-index: 3;
     border-style: solid;
     border-color: #0a9f8f;
     background: #066b60;
@@ -1125,6 +1121,35 @@ body::-webkit-scrollbar {
     border-color: #14cdb9;
     background: #0caf9e;
     transform: scale(0.85);
+}
+
+.user-menu {
+    width: 2.75rem;
+    height: 2.75rem;
+    background: none;
+    border-width: 0.125rem;
+    border-radius: 3.5rem;
+    transform-origin: center;
+    transform: scale(0.9);
+    transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1), border 0.6s cubic-bezier(0.4, 0, 0.2, 1), margin 0.6s cubic-bezier(0.4, 0, 0.2, 1), background 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.user-menu:active {
+    border-color: #14cdb9;
+    background: none;
+    transform: scale(0.85);
+}
+
+.user-container {
+    position: absolute;
+    display: flex;
+    right: 0rem;
+    width: calc((2.75rem * 2) + 1rem);
+    height: 2.75rem;
+    z-index: 3;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .username.authorized {
